--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query-devtools": "^5.17.1",
+    "axios": "^1.6.4",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
