--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.2",
     "@tanstack/react-query-devtools": "^5.17.1",
     "axios": "^1.6.4",
+    "negotiator": "^0.6.3",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
