--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.4",
     "negotiator": "^0.6.3",
     "next": "14.0.4",
+    "next-intl": "^3.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3"
