--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.2",
     "@tanstack/react-query-devtools": "^5.17.1",
+    "@types/lodash.pick": "^4.4.9",
     "axios": "^1.6.4",
+    "lodash.pick": "^4.4.0",
     "negotiator": "^0.6.3",
     "next": "14.0.4",
     "next-intl": "^3.4.1",
