--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next-intl": "^3.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.3",
@@ -28,6 +29,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "sass": "^1.69.7",
     "typescript": "^5"
   }
 }
